ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.3.8
    • Affects Version/s: None
    • Component/s: Build, Querying
    • None
    • Fully Compatible
    • ALL
    • Hide

      Use the following command and include the enterprise repo as well (not sure if this is a requirement):

      scons -j 12 --dbg=on --opt=off --ssl --dynamic-windows --win-version-min=ws08r2 CPPPATH="D:/workspace/libs/snmp/include D:/workspace/libs/sasl/include D:/workspace/libs/openssl/include" LIBPATH="D:/workspace/libs/snmp/lib D:/workspace/libs/sasl/lib D:/workspace/libs/openssl/lib" VERBOSE=false mongos.exe
      
      Show
      Use the following command and include the enterprise repo as well (not sure if this is a requirement): scons -j 12 --dbg=on --opt=off --ssl --dynamic-windows --win-version-min=ws08r2 CPPPATH="D:/workspace/libs/snmp/include D:/workspace/libs/sasl/include D:/workspace/libs/openssl/include" LIBPATH="D:/workspace/libs/snmp/lib D:/workspace/libs/sasl/lib D:/workspace/libs/openssl/lib" VERBOSE=false mongos.exe
    • Query 15 (06/03/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Building mongod/mongos on Windows with --opt=off/--dbg=on fails with the following error:

      collator_interface_icu.obj : error LNK2019: unresolved external symbol "__declspec(dllimport) public: unsigned char const * __cdecl icu_57::CollationKey::getByteArray(int &)const " (__imp_?getByteArray@CollationKey@icu_57@@QEBAPEBEAEAH@Z) referenced in function "public: virtual class mongo::CollatorInterface::ComparisonKey __cdecl mongo::CollatorInterfaceICU::getComparisonKey(class mongo::StringData)const " (?getComparisonKey@CollatorInterfaceICU@mongo@@UEBA?AVComparisonKey@CollatorInterface@2@VStringData@2@@Z)
      

      The same build succeeds, when --opt=on is used.

            Assignee:
            J Rassi (Inactive)
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: