SERVER-24195 Make ICU defines consistent btwn. ICU and client sources